Fix incorrect tagging

--- a/.env.base
+++ b/.env.base
@@ -19,6 +19,6 @@ MYSQL_USER=vennue_user
 MYSQL_VERSION=8.0.32
 
 # Workspace
-ALPINE_MINOR_VERSION=3
+ALPINE_PATCH_VERSION=3
 CODE_PATH_WORKSPACE=/var/usr/app/
 COMPOSER_VERSION=2.5.5
