--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,8 @@
 # Common
 ALPINE_MAJOR_MINOR_VERSION=3.17
-CODE_PATH_HOST=./code/
+CODE_PATH_HOST=./code
+COMPOSE_PROJECT_NAME=vennue-backend
+COMPOSE_REGISTRY=localhost
 NETWORK_DRIVER=bridge
 PHP_PACKAGES_VERSION=81
 VOLUME_DRIVER=local
@@ -8,7 +10,7 @@ VOLUME_DRIVER=local
 # Apache
 APACHE_PORT=80
 APACHE_VERSION=2.4.57
-CODE_PATH_APACHE=/var/www/html/
+CODE_PATH_APACHE=/var/www/html
 
 # MySql
 MYSQL_DATABASE=vennue
@@ -20,5 +22,5 @@ MYSQL_VERSION=8.0.32
 
 # Workspace
 ALPINE_PATCH_VERSION=3
-CODE_PATH_WORKSPACE=/var/usr/app/
+CODE_PATH_WORKSPACE=/var/usr/app
 COMPOSER_VERSION=2.5.5
