--- a/docker/apache/httpd.conf
+++ b/docker/apache/httpd.conf
@@ -189,7 +189,7 @@ LoadModule autoindex_module modules/mod_autoindex.so
 #LoadModule dav_fs_module modules/mod_dav_fs.so
 #LoadModule dav_lock_module modules/mod_dav_lock.so
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
-#LoadModule negotiation_module modules/mod_negotiation.so
+LoadModule negotiation_module modules/mod_negotiation.so
 LoadModule dir_module modules/mod_dir.so
 #LoadModule imagemap_module modules/mod_imagemap.so
 #LoadModule actions_module modules/mod_actions.so
@@ -262,8 +262,8 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/usr/local/apache2/htdocs/public"
-<Directory "/usr/local/apache2/htdocs/public">
+DocumentRoot "/usr/local/apache2/htdocs/public/"
+<Directory "/usr/local/apache2/htdocs/public/">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -291,12 +291,15 @@ DocumentRoot "/usr/local/apache2/htdocs/public"
     Require all granted
 </Directory>
 
+# Proxy all requests through index.php and to the FCGI handler - PHP-FPM running at localhost:9000
+ProxyPassMatch ^(.*)$ fcgi://127.0.0.1:9000/usr/local/apache2/htdocs/public/index.php/$1
+
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.php
 </IfModule>
 
 #
