--- a/code/.env.prod
+++ b/code/.env.prod
@@ -6,7 +6,7 @@ APP_URL=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=warning
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
